tests/lean/vars1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Imported 'Int'
  Assumed: a
  Assumed: b
  Assumed: c
vars1.lean:3:0: error: invalid object declaration, environment already has an object named 'b'
  Assumed: d
  Assumed: e
  Assumed: f
2 + a + b + c + d + e + f
