tests/lean/vars1.lean
Import Int.
Variables a b c : Int
Variables d b e : Int
Variables d e f : Int
Eval 1 + 1 + a + b + c + d + e + f